@@ -4,6 +4,9 @@ Changelog
 1.3 (unreleased)
 ----------------
 
+- Fix AttributeError when looking up `context.request` if a CAS URL isn't
+  configured and users are logged out.
+  [davidjb]
 - Use navigation root rather than portal for the log out URL.
   [davidjb]
 - Fix creation of CAS4PAS plugin when one doesn't exist on CAS control panel
